fix header align itens

--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,8 @@ header h1 {
     cursor: pointer;
 }
 
+nav ul { margin: 0; padding: 0; }
+
 nav ul li {
     display: inline-block;
     margin: 0 10px;
